# lambda-car-backend

./: docker-compose.yml  pyproject.toml
scripts/: init-local-db.sh
src/lambda-car-backend/: app.py  constants.py  dependencies.py  settings.py
src/lambda-car-backend/commands/: car_commands.py  commit_commands.py  maintenance_commands.py  refueling_commands.py  trip_commands.py  user_commands.py
src/lambda-car-backend/domain/: car.py  commit.py  errors.py  fuelinfo.py  maintenance.py  mileage.py  models.py  refueling.py  trip.py  user.py
src/lambda-car-backend/repositories/: application_transaction.py  car_repository.py  commit_id.py  commit_repository.py  maintenance_repository.py  refueling_repository.py  trip_repository.py  user_repository.py
src/lambda-car-backend/schemas/: auth_schemas.py  car_schemas.py  commit_schemas.py  maintenance_schemas.py  refueling_schemas.py  trip_schemas.py  user_schemas.py
src/lambda-car-backend/security/: password_hasher.py  token_service.py
tests/: conftest.py
tests/auth/: test_auth_router.py
tests/car/: test_car_domain.py  test_car_router.py  test_car_service.py
tests/commit/: test_commit_domain.py  test_commit_router.py  test_commit_service.py
tests/maintenance/: test_maintenance_domain.py  test_maintenance_router.py  test_maintenance_service.py
tests/refueling/: test_refueling_domain.py  test_refueling_router.py  test_refueling_service.py
tests/trip/: test_trip_domain.py  test_trip_router.py  test_trip_service.py
tests/user/: test_user_domain.py  test_user_router.py  test_user_service.py
(+50 files in other folders)
