[project]
name = "lambda-car-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Luca Atella",email = "atellaluca@outlook.it"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.135.3,<0.136.0)",
    "mkdocs (>=1.6.1,<2.0.0)",
    "argon2-cffi (>=25.1.0,<26.0.0)",
    "boto3 (>=1.42.93,<2.0.0)",
    "jwt (>=1.4.0,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]

[tool.poetry]
packages = [{include = "lambda-car-backend", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
